--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "better-sqlite3": "^12.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "drizzle-kit": "^0.31.8",
     "drizzle-orm": "^0.45.0",
     "leaflet": "^1.9.4",
